# console-weather-app

./: .gitignore  README.md  fetchData.py  pyproject.toml  weatherApp.py
weather_console_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
